# 2024-02-Homomorphic-Encryption

./: CMakeLists.txt  main.cpp  main_client_employee.cpp  main_client_employer.cpp  main_server.cpp  main_temp.cpp
client/: EmployeeClient.cpp  EmployeeClient.h  EmployerClient.cpp  EmployerClient.h  SkillTable.cpp  SkillTable.h
domain/: MatchingService.hpp  Monitor.hpp  checker.cpp  checker.h  data.h  decoder.cpp  matcher.hpp  repository.hpp  respository.hpp
domain/calculator/: calculator.cpp  calculator.h
domain/crypto/: CryptoFactory.cpp  CryptoFactory.h  DomainDecryptor.cpp  DomainDecryptor.h  DomainEncryptor.cpp  DomainEncryptor.h  DomainEvaluator.cpp  DomainEvaluator.h
domain/legacy/: MatchingService.hpp  matcher.hpp
domain/transform/: decoder.cpp  decoder.h  encoder.cpp  encoder.h
util/: TCPClient.hpp  util.cpp  util.h
